--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta property="og:title" content="ExtraTorrent - Unblocked ExtraTorrent Proxy & Mirror">
     <meta property="og:description" content="Unable to access ExtraTorrent? Use a proxy site to bypass your ISP block. ExtraTorrent proxy site allows you to bypass blocks setup by your Internet provider.">
     <meta property="og:url" content="https://extratorrent-proxy.github.io ">
-    <meta property="og:image" content="/assets/img/ExtraTorrent.png">
+    <meta property="og:image" content="/assets/img/logo.gif">
     <meta property="og:type" content="website">
     <title>ExtraTorrent Proxy - Unblocked ExtraTorrent Proxy & Mirror 2022</title>
     <link rel="stylesheet" href="/assets/css/bootstrap.css" media="screen">
@@ -30,7 +30,7 @@
   </head>
   <body data-home-page-title="index" class="u-body"><header class="u-clearfix u-grey-5 u-header u-header" id="sec-f410"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <a href="https://extratorrent-proxy.github.io" class="u-image u-logo u-image-1" data-image-width="525" data-image-height="141">
-          <img src="/assets/img/ExtraTorrent.png" class="u-logo-image u-logo-image-1">
+          <img src="/assets/img/logo.gif" class="u-logo-image u-logo-image-1">
         </a>
       </div></header>
     <section class="u-align-center u-clearfix u-section-1" id="sec-20b9">
