--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:url" content="https://extratorrent-proxy.github.io ">
     <meta property="og:image" content="/assets/img/logo.gif">
     <meta property="og:type" content="website">
-    <title>ExtraTorrent Proxy - Unblocked ExtraTorrent Proxy & Mirror 2022</title>
+    <title>ExtraTorrent Proxy - Unblocked ExtraTorrent Proxy & Mirror 2024</title>
     <link rel="stylesheet" href="/assets/css/bootstrap.css" media="screen">
     <link rel="stylesheet" href="/assets/css/style.css" media="screen">
     <script class="u-script" type="text/javascript" src="jquery-1.9.1.min.js" defer=""></script>
@@ -74,6 +74,16 @@
               <tr style="height: 60px;">
                 <td class="u-table-cell">
                   <a href="https://extratorrent.proxyninja.org" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-2" target="_blank">extratorrent.proxyninja.org</a>
+                </td>
+                <td class="u-table-cell">NL</td>
+                <td class="u-table-cell"> &nbsp;<span class="u-icon u-icon-2"><svg class="u-svg-content" viewBox="0 0 384 384" style="width: 1em; height: 1em;"><path d="m368 192c0 97.203125-78.796875 176-176 176s-176-78.796875-176-176 78.796875-176 176-176 176 78.796875 176 176zm0 0" fill="#4dd0e1"></path><g fill="#012e52"><path d="m356.542969 127.609375c-8.488281 2.480469-13.34375 11.367187-10.863281 19.847656 4.191406 14.328125 6.320312 29.320313 6.320312 44.542969 0 88.222656-71.777344 160-160 160s-160-71.777344-160-160 71.777344-160 160-160c32.0625 0 62.910156 9.375 89.207031 27.105469 7.320313 4.941406 17.273438 3 22.207031-4.320313 4.9375-7.328125 3.011719-17.273437-4.316406-22.210937-31.601562-21.308594-68.632812-32.574219-107.097656-32.574219-105.863281 0-192 86.128906-192 192s86.136719 192 192 192 192-86.128906 192-192c0-18.273438-2.550781-36.28125-7.601562-53.527344-2.488282-8.480468-11.34375-13.359375-19.855469-10.863281zm0 0"></path><path d="m356.6875 36.6875-164.6875 164.679688-52.6875-52.679688c-6.25-6.246094-16.375-6.246094-22.625 0-6.246094 6.25-6.246094 16.375 0 22.625l64 64c3.128906 3.128906 7.214844 4.6875 11.3125 4.6875s8.183594-1.558594 11.3125-4.6875l176-176c6.246094-6.25 6.246094-16.375 0-22.625-6.25-6.246094-16.375-6.246094-22.625 0zm0 0"></path>
+</g></svg><img></span>&nbsp; 
+                </td>
+                <td class="u-table-cell"> Very Fast</td>
+              </tr>
+		<tr style="height: 60px;">
+                <td class="u-table-cell">
+                  <a href="https://extratorrent.proxyninja.net" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-2" target="_blank">extratorrent.proxyninja.net</a>
                 </td>
                 <td class="u-table-cell">NL</td>
                 <td class="u-table-cell"> &nbsp;<span class="u-icon u-icon-2"><svg class="u-svg-content" viewBox="0 0 384 384" style="width: 1em; height: 1em;"><path d="m368 192c0 97.203125-78.796875 176-176 176s-176-78.796875-176-176 78.796875-176 176-176 176 78.796875 176 176zm0 0" fill="#4dd0e1"></path><g fill="#012e52"><path d="m356.542969 127.609375c-8.488281 2.480469-13.34375 11.367187-10.863281 19.847656 4.191406 14.328125 6.320312 29.320313 6.320312 44.542969 0 88.222656-71.777344 160-160 160s-160-71.777344-160-160 71.777344-160 160-160c32.0625 0 62.910156 9.375 89.207031 27.105469 7.320313 4.941406 17.273438 3 22.207031-4.320313 4.9375-7.328125 3.011719-17.273437-4.316406-22.210937-31.601562-21.308594-68.632812-32.574219-107.097656-32.574219-105.863281 0-192 86.128906-192 192s86.136719 192 192 192 192-86.128906 192-192c0-18.273438-2.550781-36.28125-7.601562-53.527344-2.488282-8.480468-11.34375-13.359375-19.855469-10.863281zm0 0"></path><path d="m356.6875 36.6875-164.6875 164.679688-52.6875-52.679688c-6.25-6.246094-16.375-6.246094-22.625 0-6.246094 6.25-6.246094 16.375 0 22.625l64 64c3.128906 3.128906 7.214844 4.6875 11.3125 4.6875s8.183594-1.558594 11.3125-4.6875l176-176c6.246094-6.25 6.246094-16.375 0-22.625-6.25-6.246094-16.375-6.246094-22.625 0zm0 0"></path>
